--- a/detail.html
+++ b/detail.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-   <center> <h1>Short Story About JAJI YUSUF</h1></center>
+   <center> <h1>Short Story About JAJI YUSUF  <br><br> <b>(ALT/SOE/023/3285)</b></h1></center>
     <p>
         <b>Jaji Yusuf</b>: My Journey,<br>
 
